# hypernets_api

./: .gitlab-ci.yml  .readthedocs.yml  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: Makefile  conf.py  index.rst  make.bat  requirements.txt
docs/content/developer/: developer_guide.rst
docs/content/user/: api.rst  atbd.rst  base_api.rst  factory.rst  offline_api.rst  online_api.rst  quickstart.rst  stac_client.rst  user_guide.rst
examples/example_archive/: create_subset_db.py  example_archive.db  example_query_download.py
hypernets_api/: __init__.py  _version.py  base.py  example.py  factory.py  offline_api.py  online_api.py  stac_client.py  wrapper.py
hypernets_api/subpackage_template/: module_template.py
hypernets_api/subpackage_template/tests/: test_class_template.py
hypernets_api/tests/: test_base.py  test_factory.py  test_offline_api.py  test_online_api.py  test_stac_client.py
quality_documentation/base/: CookiecutterMacros.tex
